--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!--bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- -->
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/styles/index.scss">
+  <link rel="stylesheet" type="text/css" href="assets/styles/main.css">
+	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+    <body>
+      <div class="grid">
+      	<div class="row">
+      		<div class="item-0 item"></div>
+      		<div class="item-1 item"></div>
+      		<div class="item-2 item"></div>
+        </div>
+        <div class="row">
+      		<div class="item-3 item"></div>
+      		<div class="item-4 item"></div>
+      		<div class="item-5 item"></div>
+        </div>
+        <div class="row">
+      		<div class="item-6 item"></div>
+      		<div class="item-7 item"></div>
+      		<div class="item-8 item"></div>
+        </div>
+      </div>
+      <footer>
+        <div class="btm-nav">
+          <div class="x-turn" id="current-x">X</div>
+            <button type="button" class="btn btn-secondary" id="reset">Reset</button>
+          <div class="o-turn" id="current-o">O</div>
+        </div>
+      </footer>
     </body>
 </html>
