--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Example</title>
+  <title>Slay's Tac Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--bootstrap -->
@@ -21,7 +21,7 @@
     <body>
       <div class="grid">
       	<div class="row">
-      		<div class="item-0 item"></div>
+      		<div class="item-0 item" id="firstSquare"></div>
       		<div class="item-1 item"></div>
       		<div class="item-2 item"></div>
         </div>
