WIP - Logic still broken
Isolated the problem. Going to modify render function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1>Welcome to Tic Tac Toe</h1>
         <p><a href="./index.html">Play Again?</a></p>
       </span>
-
+ <div class="login">
   <form id="sign-up">
     <fieldset>
       <legend>Sign up!</legend>
@@ -70,6 +70,7 @@
       <input type="submit" name="submit" value="Change Password">
     </fieldset>
   </form>
+</div>
 
   <div class="flex-container" id="grid">
     <div class="row">
