WIP - Able to save game state
Now working on retrieving data from the server

--- a/index.html
+++ b/index.html
@@ -94,12 +94,8 @@
       <div class="my-turn" id="myTurnO">O</div>
     </div>
   </div>
-  <div class="api">
-    <form>
-      <input name="game[cell][index]" type="text" value="0">
-      <input name="game[cell][value]" type="text" value="x">
-      <input name="game[over]" type="text" value="false">
-    </form>
+  <div>
+      <button type="submit" class="btn btn-lg btn-block wins" id="newGame"><h3>New Game</h3></button>
   </div>
 </body>
 
