WIP: Able to retrieve game data from server
Now working on fixing turn logic bug and board reset

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
   <div>
       <button type="submit" class="btn btn-lg btn-block wins" id="newGame"><h3>New Game</h3></button>
   </div>
+  <div>
+      <button type="submit" class="btn btn-lg btn-block wins" id="get-games"><h3>Games Played</h3></button>
+  </div>
 </body>
 
 </html>
