--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <button id="btn-popup01" class="popup">popup button 1</button>
   <span class="overlay_popup btn-popup01"><a href="#" onclick="$(this).popupClose();">close</a>
       <h1>X Wins!</h1>
-        <p><a href="./index.html">Play Again?</a></p>
+        <p><a class="replay">Play Again?</a></p>
       </span>
   <button id="btn-popup02" class="popup">popup button 2</button>
   <span class="overlay_popup btn-popup02"><a href="#" onclick="$(this).popupClose();">close</a>
       <h1>O Wins</h1>
-        <p>Play Again?</p>
+        <p><a class="replay">Play Again?</a></p>
       </span>
   <button id="btn-popup03" class="popup">popup button 2</button>
   <span class="overlay_popup btn-popup03"><a href="#" onclick="$(this).popupClose();">close</a>
@@ -56,12 +56,12 @@
       <input type="submit" name="submit" value="Sign in!">
     </fieldset>
   </form>
-  <form id="sign-out">
+  <!-- <form id="sign-out">
     <fieldset>
       <legend>Sign out!</legend>
       <input type="submit" name="submit" value="Sign out!">
     </fieldset>
-  </form>
+  </form> -->
   <form id="change-password">
     <fieldset>
       <legend>Change Password</legend>
@@ -94,12 +94,38 @@
       <div class="my-turn" id="myTurnO">O</div>
     </div>
   </div>
+  <div class="game-icons">
+    <h3>Total Games Played:</h3> <h2 id="games-played">--</h2>
+  </div>
   <div>
       <button type="submit" class="btn btn-lg btn-block wins" id="newGame"><h3>New Game</h3></button>
   </div>
   <div>
       <button type="submit" class="btn btn-lg btn-block wins" id="get-games"><h3>Games Played</h3></button>
   </div>
+  <form id="sign-out">
+    <fieldset>
+      <legend>Sign out!</legend>
+      <input type="submit" name="submit" value="Sign out!">
+    </fieldset>
+  </form>
+  <div class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 </body>
 
 </html>
