--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
   <!-- -->
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -56,12 +56,6 @@
       <input type="submit" name="submit" value="Sign in!">
     </fieldset>
   </form>
-  <!-- <form id="sign-out">
-    <fieldset>
-      <legend>Sign out!</legend>
-      <input type="submit" name="submit" value="Sign out!">
-    </fieldset>
-  </form> -->
   <form id="change-password">
     <fieldset>
       <legend>Change Password</legend>
